255,257: fix bug in menuItem sync, fix layout issues in onboarding

--- a/src/options/pages/templates/TemplatesPage.scss
+++ b/src/options/pages/templates/TemplatesPage.scss
@@ -108,6 +108,8 @@
 }
 
 .CategoryInfo {
+  max-width: 800px;
+
   .card-title {
     text-transform: none;
   }
